# jewels-linux-app

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  LICENSE.txt  PKGBUILD  arch.dockerfile  build.rs  dev.imanuel.jewels.autostart.desktop  dev.imanuel.jewels.desktop  dev.imanuel.jewels.json  dev.imanuel.jewels.metainfo.xml  dev.imanuel.jewels.yaml  flatpak.dockerfile  jewels-desktop.kdev4  jewels-update.service  jewels-update.socket  jewels-wg-config.service  org.kde.jewels-desktop.desktop  org.kde.jewels-desktop.json  org.kde.jewels-desktop.metainfo.xml
android/: AndroidManifest.xml  build.gradle
jewels-desktop/: Cargo.toml  build.rs
jewels-desktop/qml/ui/: MainApp.qml  MainPage.qml
jewels-desktop/qml/ui/pages/: InstallPage.qml  JewelsPage.qml  LoginPage.qml  TotpCard.qml  TwoFactorPage.qml  UpdatesPage.qml
jewels-desktop/src/: lib.rs  qml_exports.rs
jewels-desktop/src/api/: device.rs  mod.rs  otp.rs  owner.rs
jewels-desktop/src/authentication/: interactive_login.rs  mod.rs
jewels-desktop/src/eol/: mod.rs
jewels-desktop/src/models/: clipboard.rs  helper.rs  install.rs  jewels.rs  login.rs  mod.rs  otp.rs  owners.rs  packages.rs  two_factor.rs  updates.rs
jewels-desktop/src/updater/: mod.rs
jewelsd/: Cargo.toml
jewelsd/src/: lib.rs
libjewels/: Cargo.toml
libjewels/src/: lib.rs
libjewels/src/alpm/: config.rs  mod.rs  packages.rs
libjewels/src/aur/: build.rs  consts.rs  gpg.rs  mod.rs
libjewels/src/collector/: detector.rs  mod.rs  sender.rs
libjewels/src/commands/: mod.rs  wireguard.rs
libjewels/src/configuration/: mod.rs
libjewels/src/dbus/: aur.rs  mod.rs  pacman.rs  screensaver.rs  wireguard.rs
libjewels/src/wireguard/: mod.rs
package/: jewels.install
package/dbus-1/: cloud.ulbricht.jewels.conf
package/desktop/: dev.imanuel.jewels.desktop
package/systemd/: jewelsd.service
package/sysusers.d/: jewels.conf
qml/ui/: MainApp.qml  MainPage.qml  main.qml
qml/ui/pages/: JewelsPage.qml  LoginPage.qml  TwoFactorPage.qml  UpdatesPage.qml  jewels.qml
src/: CMakeLists.txt  Jewels.cpp  Jewels.h  app.cpp  app.h  jewels-desktopconfig.kcfgc  jewelsconfig.kcfg  jewelsconfig.kcfgc  main.cpp  main.rs  resources.qrc
src/alpm/: mod.rs  packages.rs
src/authentication/: interactive_login.rs
src/collector/: mod.rs  sender.rs
src/commands/: collection.rs  mod.rs  updater.rs
src/contents/ui/: Main.qml  jewels.qml  main.qml
src/detector-rs/: build.rs
src/detector-rs/src/: lib.rs  native.rs
src/detector-rs/src/collector/: detector.rs  mod.rs  sender.rs
src/device/: Bios.cpp  Cpu.cpp  Device.cpp  Drive.cpp  Kernel.cpp  Mainboard.cpp  OperatingSystem.cpp  Utils.cpp  device.h
src/jewels/: app.cpp  app.h  main.cpp
src/models/: config.rs  jewels.rs  login.rs  mod.rs
src/qml/: resources.qrc
src/qml/ui/: main.qml
src/qt/: app.rs
src/wireguard/: mod.rs
