[package]
name = "jewels"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jewelsd"
path = "src/bin/jewelsd.rs"
required-features = ["jewelsd"]

[[bin]]
name = "jewels"
path = "src/bin/jewels-desktop.rs"
required-features = ["jewels-desktop"]

[workspace.package]
version = "5.0.1"
edition = "2024"
rust-version = "1.95.0"

[workspace]
members = [
    "jewelsd",
    "jewels-desktop",
    "libjewels"
]

[workspace.dependencies]
alpm = "5"
alpm-utils = "5"
anyhow = "1"
arboard = { version = "3", features = ["wl-clipboard-rs"] }
clap = { version = "4", features = ["derive"] }
configparser = "3"
cxx = "1"
cxx-qt = "0.9"
cxx-qt-lib = { version = "0.9", features = ["qt_full"] }
cxx-qt-lib-extras = "0.9"
cxx-qt-build = "0.9"
env_logger = "0.11"
file-owner = "0.1"
futures-util = "0.3"
log = "0.4"
machine-uid = "0.6"
notify-rust = "4"
num_cpus = "1"
open = "5"
pacmanconf = "3"
procfs = "0.18"
progress_bar = "1"
raur = "8"
reqwest = { version = "0.13", features = ["rustls-native-certs", "rustls", "blocking", "json", "charset", "http2"], default-features = false }
serde = { version = "1", features = ["derive"] }
smbios-lib = "0.9"
srcinfo = "2"
sysinfo = { version = "0.39", features = ["serde"] }
termsize = "0.1"
tokio = { version = "1", features = ["full"] }
totp-rs = "5.7"
uuid = { version = "1", features = ["v4"] }
warp = { version = "0.4", features = ["server"] }
xdg = "3"
zbus = { version = "5", features = ["tokio"] }
zbus_systemd = { version = "0.26000", features = ["systemd1"] }

[dependencies]
jewels-desktop = { path = "jewels-desktop", optional = true }
jewelsd = { path = "jewelsd", optional = true }

clap = { workspace = true }
tokio = { workspace = true }

[features]
systemd = []
jewelsd = ["dep:jewelsd"]
jewels-desktop = ["dep:jewels-desktop"]
