[package]
name = "jewels-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
arboard = { workspace = true }
cpp = { workspace = true }
cstr = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
libjewels = { path = "../libjewels" }
log = { workspace = true }
notify-rust = { workspace = true }
open = { workspace = true }
qmetaobject = { workspace = true }
qttypes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
totp-rs = { workspace = true }
warp = { workspace = true }
xdg = { workspace = true }
zbus = { workspace = true }

[build-dependencies]
cpp_build = { workspace = true }
semver = { workspace = true }
