[package]
name = "jewels-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
libjewels = { path = "../libjewels" }

anyhow = { workspace = true }
arboard = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }
cxx-qt-lib-extras = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
notify-rust = { workspace = true }
open = { workspace = true }
progress_bar = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
termsize = { workspace = true }
tokio = { workspace = true }
totp-rs = { workspace = true }
warp = { workspace = true }
xdg = { workspace = true }
zbus = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true }
