[package]
name = "libjewels"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alpm = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
configparser = { workspace = true }
cpp = { workspace = true }
cstr = { workspace = true }
env_logger = { workspace = true }
listenfd = { workspace = true }
log = { workspace = true }
machine-uid = { workspace = true }
notify-rust = { workspace = true }
num_cpus = { workspace = true }
open = { workspace = true }
procfs = { workspace = true }
qmetaobject = { workspace = true }
qttypes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
smbios-lib = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
warp = { workspace = true }
xdg = { workspace = true }
zbus = { workspace = true }
zbus_systemd = { workspace = true }
